fixed script src in index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </a>
       </section>
     </div>
-    <script src="scripts/scripts.js" />
+    <script src="scripts/scripts.js"></script>
   </body>
 </html>
