--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shrek</title>
     <link href="./styles/styles.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
-    <div class="containerShrek">
+    <div class="animate__animated animate__flipInX containerShrek">
       <section class="Shrek">
         <h2 class="heading">Shrek</h2>
         <img src="images/shrek.jpg" width="470x" height="270px" class="img" />
